--- a/crud-spring/pom.xml
+++ b/crud-spring/pom.xml
@@ -61,6 +61,19 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version> <!-- Use a versão mais recente se necessário -->
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	
 
