--- a/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
 server.error.include-message=never
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.web.resources.static-locations: classpath:/webapp/
 
