refactor: add JWT Security

--- a/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/src/main/resources/application.properties
@@ -10,3 +10,4 @@ server.error.include-message=never
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.web.resources.static-locations: classpath:/webapp/
 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
